--- a/fullStack/build.gradle
+++ b/fullStack/build.gradle
@@ -25,16 +25,19 @@
 		implementation 'org.springframework.boot:spring-boot-starter-validation'
 		implementation 'org.springframework.boot:spring-boot-starter-web'
 		implementation 'org.springframework.boot:spring-boot-devtools'
-		//스프링 시큐리티
-//		implementation 'org.springframework.boot:spring-boot-starter-security'
 
 		compileOnly 'org.projectlombok:lombok'
 	//	runtimeOnly 'com.h2database:h2'
-		//mysql 연결implementation 'mysql:mysql-connector-java:8.0.27'
+		//mysql 연결
 		implementation 'org.springframework.boot:spring-boot-starter'
 		implementation 'mysql:mysql-connector-java:8.0.32'  //mysql로 연결 시작.
 		//어째서 sql 버전을 써줘야지만 제대로 연동 되는지 잘 모르겠음. 이거 꼭 기록에 남겨야함.
 		implementation 'com.google.code.gson:gson:2.9.0'  //GSON 라이브러리 추가. --> JSON 데이터를 자바 객체로 변환해줌
+
+		// 스프링 시큐리티와 Jwt 토큰을 통해 로그인을 하기 위해
+		implementation 'io.jsonwebtoken:jjwt:0.9.1'
+		implementation 'org.springframework.boot:spring-boot-starter-security'
+		implementation 'com.auth0:java-jwt:4.4.0'
 
 		//롬복
 		annotationProcessor 'org.projectlombok:lombok'
