--- a/fullStack/src/main/resources/application.yml
+++ b/fullStack/src/main/resources/application.yml
@@ -15,7 +15,7 @@ spring:
         username: hyunsoo
     jpa:
         hibernate:
-            ddl-auto: update      #??????? ??? ? ??????? ????? ?? ??? ??'
+            ddl-auto: create #나중에 축적할때는 update로     #??????? ??? ? ??????? ????? ?? ??? ??'
         properties:
             hibernate:
                 format_sql: true #???? query? ????.'
@@ -24,5 +24,5 @@ spring:
             enabled: always
 
 kakao:
-    api: 913c3e2fbc06e7547c10855ae65ad336
+    api: e46108e34fbd300113e956802d6cf75e
     redirect_uri: http://localhost:8080/auth/kakao/callback
