--- a/fullStack/build.gradle
+++ b/fullStack/build.gradle
@@ -45,6 +45,8 @@
 		runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.5'
 		runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5'
 
+		//web client
+		implementation 'org.springframework.boot:spring-boot-starter-webflux'
 
 		//롬복
 		annotationProcessor 'org.projectlombok:lombok'
