Feat: Connect regional bussiness analysis table to database schema

--- a/fullStack/src/main/resources/application.properties
+++ b/fullStack/src/main/resources/application.properties
@@ -9,7 +9,7 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.password=capstone
 spring.datasource.url=jdbc:mysql://fullstack-database.c65pfyhzvgou.ap-northeast-2.rds.amazonaws.com:3306/fullstack_database?serverTimezone=UTC&characterEncoding=UTF-8
 spring.datasource.username=admin
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=none
 spring.jpa.properties.hibernate.format_sql=true
 spring.output.ansi.enabled=always
 
