feat: Add post and file entity, repository, service

--- a/fullStack/src/main/resources/application.properties
+++ b/fullStack/src/main/resources/application.properties
@@ -14,4 +14,6 @@ spring.jpa.hibernate.ddl-auto=none
 spring.jpa.properties.hibernate.format_sql=true
 spring.output.ansi.enabled=always
 
+file.dir=E:\files\
+
 #?? ?? ??? ??. update? ??? ???? ????? ??. ??? ?? ?? ? ?? ddl
