--- a/fullStack/build.gradle
+++ b/fullStack/build.gradle
@@ -1,7 +1,10 @@
-	plugins {
+
+plugins {
 		id 'java'
 		id 'org.springframework.boot' version '3.0.4'
 		id 'io.spring.dependency-management' version '1.1.0'
+		//QueryDSL 추가
+		//id "com.ewerk.gradle.plugins.querydsl" version "1.0.10"
 	}
 
 	group = 'capstone'
@@ -56,6 +59,11 @@
 		testCompileOnly 'org.projectlombok:lombok'
 		testAnnotationProcessor 'org.projectlombok:lombok'
 
+		//querydsl
+		implementation 'com.querydsl:querydsl-jpa:5.0.0:jakarta'
+		annotationProcessor "com.querydsl:querydsl-apt:5.0.0:jakarta"
+		annotationProcessor "jakarta.annotation:jakarta.annotation-api"
+		annotationProcessor "jakarta.persistence:jakarta.persistence-api"
 
 		implementation 'com.github.gavlyukovskiy:p6spy-spring-boot-starter:1.5.6'
 	}
@@ -63,3 +71,20 @@
 	tasks.named('test') {
 		useJUnitPlatform()
 	}
+
+
+	//querydsl 추가 시작
+	def querydslDir = "$buildDir/generated/querydsl"
+
+	sourceSets {
+		main.java.srcDirs += [ querydslDir ]
+	}
+
+	tasks.withType(JavaCompile) {
+		options.annotationProcessorGeneratedSourcesDirectory = file(querydslDir)
+	}
+
+	clean.doLast {
+		file(querydslDir).deleteDir()
+	}
+	//querydsl 추가 끝
