--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-native-dotenv": "^3.4.8",
     "react-router-dom": "^6.10.0",
     "react-scripts": "^5.0.1",
+    "react-select": "^5.7.3",
     "rsuite": "^5.32.0",
     "web-vitals": "^2.1.4"
   },
