--- a/fullStack/src/main/resources/application.properties
+++ b/fullStack/src/main/resources/application.properties
@@ -19,6 +19,6 @@ spring.servlet.multipart.max-request-size=5MB
 spring.servlet.multipart.max-file-size=2MB
 spring.jpa.open-in-view=false
 
-file.dir=E:\files\
+file.dir=C:\\files\\
 
 #?? ?? ??? ??. update? ??? ???? ????? ??. ??? ?? ?? ? ?? ddl
