--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 REACT_APP_YOUTUBE_API_KEY = "AIzaSyDX5xQ4MPhXI2QhwMgAXh6xD5MfYcK5fUo"
 REACT_APP_REST_API_KEY = "ab54cf53e7db5426dd78d8092e73937c"
-REACT_APP_REDIRECT_URI = "http://3.39.41.194:8080/oauth/kakao/callback"
+REACT_APP_REDIRECT_URI = "http://localhost:3000/oauth/kakao/callback"
