--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "leaflet": "^1.9.3",
     "react": "^18.2.0",
     "react-apexcharts": "^1.4.0",
+    "react-avatar": "^5.0.3",
     "react-bootstrap": "^2.7.2",
     "react-dom": "^18.2.0",
     "react-leaflet": "^4.2.1",
